modal working somewhat, route working ok

--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,20 @@
 	z-index: 3;
 	width: 310px;
 	height: auto;
-	background-color: #FEFFC9; 
+	background: rgba(0,0,0,0.3);
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);	 
 	padding: 10px;
 	font-size: 18px;
-	border-style: ridge;
-	border-width: 3px;
+	border-radius: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black; 
 }
 input.button {
 	margin-top: 5px;
+	background-color: orange;
 }
 [type=search] {
 	color: blue;
@@ -28,7 +34,7 @@ input.button {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+	background: rgba(0,0,0,0.2);
 	z-index: 99999;
 	opacity: 0;
 	-webkit-transition: opacity 400ms ease-in;
@@ -41,8 +47,10 @@ input.button {
 	pointer-events: auto;
 }
 .modalDialog > div {
-	width: 400px;
+	width: 200px;
 	position: relative;
+	left: -230px;
+	bottom: -450px;
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
 	border-radius: 10px;
